# aiodocker

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  BUILD  CHANGES.md  CHANGES.rst  CONTRIBUTORS.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE_PROCEDURE.rst  circle.yml  codecov.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run-ci-tests.sh  run-tests-in-docker.sh  setup.cfg  setup.py  test.sh  test_integration.py  tox.ini
.azure-pipelines/: ci.yml  deploy.yml  lint-stage.yml  test-stage.yml  tests-template.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml
CHANGES/: .#424.bugfix  1001.feature  1001.feature.md  1002.feature.md  1003.feature.md  1004.bugfix  1007.feature.md  115.bugfix  116.bugfix  128.bugfix  155.bugfix  156.bugfix  164.feature  164.removal  167.misc  169.bugfix  172.bugfix  174.feature  181.feature  189.feature  190.feat  190.feature  192.misc  193.feature  200.feature  203.feature  215.feature  219.feature  222.bugfix  223.feature  237.bugfix  246.bugfix  253.bugfix  279.feature  28.misc  286.misc  295.bugfix  323.bugfix  338.removal  339.removal  (+54 more)
aiodocker/: __init__.py  channel.py  client.py  configs.py  containers.py  docker.py  errors.py  events.py  exceptions.py  execs.py  execute.py  images.py  jsonstream.py  logs.py  multiplexed.py  networks.py  nodes.py  secrets.py  services.py  ssh.py  stream.py  swarm.py  system.py  tasks.py  types.py  utils.py  volumes.py
aiodocker/api/: client.py  container.py  image.py  system.py
aiodocker/handles/: __init__.py  container.py  handle.py  image.py
aiodocker/models/: containers.py  images.py  resource.py
aiodocker/records/: __init__.py  container.py  image.py  record.py
aiodocker/types/: __init__.py  base.py  containers.py  healthcheck.py  networks.py
aiodocker/utils/: __init__.py  utils.py
changes/: 44.misc
docs/: Makefile  api.rst  client.rst  conf.py  configs.rst  containers.rst  events.rst  exceptions.rst  exec.rst  images.rst  index.rst  log.rst  logs.rst  make.bat  networks.rst  secrets.rst  services.rst  ssh.rst  stream.rst  swarm.rst  system.rst  tasks.rst  types.rst  volumes.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: alabaster.css  basic.css  doctools.js  searchtools.js
examples/: channel.py  events.py  info.py  info_new_api.py  ssh_example.py  ssh_example_advanced.py  stdio_stdout.py
requirements/: base.txt  ci.txt  dev.txt  doc.txt  lint.txt  test.txt
tests/: __init__.py  conftest.py  test_configs.py  test_containers.py  test_context.py  test_events.py  test_execs.py  test_execute.py  test_images.py  test_integration.py  test_networks.py  test_nodes.py  test_secrets.py  test_services.py  test_ssh.py  test_swarm.py  test_system.py  test_utils.py  test_volumes.py
tests/certs/: htpasswd  registry.crt
tests/docker/: Dockerfile  README.md  docker_context.tar  hello-world.img.tar
tests/docker/tar/: Dockerfile  app.py  docker_context.tar
tests/new-api/: conftest.py  test_containers_api.py  test_images_api.py  test_system_api.py
