[build-system]
requires = [
    "hatchling >= 1.10.0",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "aiodocker"
dynamic = ["version"]
readme = "README.rst"
description = "A simple Docker HTTP API wrapper written with asyncio and aiohttp."
license = { text = "Apache 2.0" }
requires-python = ">=3.8.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "aiohttp>=3.8",
]

[project.optional-dependencies]
ci = [
    # pinned for reproducible CI
    "aiohttp==3.9.5",
    "async-timeout==4.0.3",
    "multidict==6.0.5",
    "yarl==1.9.4",
]
dev = [
    "async-timeout==4.0.3",
    "codecov==2.1.13",
    "mypy==1.10.1",
    "packaging==24.1",
    "pre-commit>=3.5.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "pytest-sugar==1.0.0",
    "ruff==0.6.3",
    "ruff-lsp==0.0.54",
    "towncrier==23.11.0"
]
doc = [
    "alabaster==0.7.16",
    "sphinx==7.3.7",
    "sphinx-autodoc-typehints==2.2.2",
    "sphinxcontrib-asyncio==0.3.0"
]

[tool.hatch.version]
source = "vcs"

[tool.towncrier]
package = "aiodocker"
filename = "CHANGES.rst"
directory = "CHANGES"
title_format = "{version} ({project_date})"

[tool.ruff]
line-length = 88
src = ["aiodocker", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["E203", "E731", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["aiodocker"]
known-third-party= ["aiohttp", "async_timeout", "pytest"]
split-on-trailing-comma = true
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
preview = true  # enable the black's preview style

[tool.mypy]
files = ["aiodocker", "examples", "tests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov-branch --cov-report xml --cov=aiodocker -v"
norecursedirs = ["dist", "docs", "build", "venv", "virtualenv", ".git"]
minversion = "3.8.2"
testpaths = ["tests"]
junit_suite_name = "aiodocker_test_suite"
junit_family = "xunit2"
filterwarnings = ["error", "ignore::ResourceWarning:asyncio"]
asyncio_mode = "auto"
