[build-system]
requires = [
    "hatchling >= 1.10.0",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "aiodocker"
dynamic = ["version"]
readme = "README.rst"
description = "A simple Docker HTTP API wrapper written with asyncio and aiohttp."
license = { text = "Apache 2.0" }
requires-python = ">=3.9.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "aiohttp>=3.8",
]

[project.optional-dependencies]
ci = [
    # pinned for reproducible CI
    "aiohttp==3.11.6",
    "async-timeout==5.0.1",
    "multidict==6.1.0",
    "yarl==1.17.2",
]
dev = [
    "async-timeout==5.0.1",
    "codecov==2.1.13",
    "mypy==1.13.0",
    "packaging==24.1",
    "pre-commit>=3.5.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-sugar==1.0.0",
    "ruff==0.7.1",
    "ruff-lsp==0.0.58",
    "towncrier==24.8.0"
]
doc = [
    "alabaster==1.0.0",
    "sphinx==8.1.3",
    "sphinx-autodoc-typehints==2.4.4",
    "sphinxcontrib-asyncio==0.3.0"
]

[tool.hatch.version]
source = "vcs"

[tool.towncrier]
package = "aiodocker"
filename = "CHANGES.rst"
directory = "CHANGES"
title_format = "{version} ({project_date})"

[tool.ruff]
line-length = 88
src = ["aiodocker", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["E203", "E731", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["aiodocker"]
known-third-party= ["aiohttp", "async_timeout", "pytest"]
split-on-trailing-comma = true
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
preview = true  # enable the black's preview style

[tool.mypy]
files = ["aiodocker", "examples", "tests"]
ignore_missing_imports = true
# strict = true
pretty = true

[tool.pytest.ini_options]
addopts = "--cov-branch --cov-report xml --cov=aiodocker -v"
norecursedirs = ["dist", "docs", "build", "venv", "virtualenv", ".git"]
minversion = "3.8.2"
testpaths = ["tests"]
junit_suite_name = "aiodocker_test_suite"
junit_family = "xunit2"
filterwarnings = ["error", "ignore::ResourceWarning:asyncio"]
asyncio_mode = "auto"
