[build-system]
requires = [
    "hatchling >= 1.10.0",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "aiodocker"
dynamic = ["version"]
readme = "README.rst"
description = "A simple Docker HTTP API wrapper written with asyncio and aiohttp."
license = { text = "Apache 2.0" }
requires-python = ">=3.10.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "aiohttp>=3.10",
]

[project.optional-dependencies]
ssh = [
    "asyncssh>=2.14.0",
    "paramiko>=2.9.0",
]
dev = [
    "aiohttp==3.13.2",
    "towncrier==25.8.0",
]
lint = [
    "pre-commit>=3.5.0",
    "ruff==0.14.8",
    "mypy==1.19.0",
    "types-paramiko",
]
test = [
    "async-timeout~=5.0.1",
    "codecov==2.1.13",
    "packaging==25.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-sugar==1.1.1",
    "testcontainers==4.13.3",
    # SSH dependencies for testing SSH functionality
    "asyncssh>=2.14.0",
    "paramiko>=2.9.0",
]
doc = [
    "alabaster==1.0.0",
    "sphinx==8.1.3",
]

[tool.hatch.version]
source = "vcs"

[tool.towncrier]
package = "aiodocker"
filename = "CHANGES.rst"
directory = "CHANGES"
title_format = "{version} ({project_date})"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
[[tool.towncrier.type]]
directory = "feature"
name = "New Features"
[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"

[tool.ruff]
line-length = 88
src = ["aiodocker", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["E203", "E731", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["aiodocker"]
known-third-party= ["aiohttp", "async_timeout", "pytest"]
split-on-trailing-comma = true
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
preview = true  # enable the black's preview style

[tool.mypy]
files = ["aiodocker", "examples", "tests"]
ignore_missing_imports = true
# strict = true
pretty = true

[tool.pytest.ini_options]
addopts = "--cov-branch --cov-report xml --cov=aiodocker -v"
norecursedirs = ["dist", "docs", "build", "venv", "virtualenv", ".git"]
minversion = "3.8.2"
testpaths = ["tests"]
junit_suite_name = "aiodocker_test_suite"
junit_family = "xunit2"
filterwarnings = [
    "error",
    "ignore::ResourceWarning:asyncio",
    "ignore:'asyncio.iscoroutinefunction' is deprecated",
    "ignore:The @wait_container_is_ready decorator is deprecated.*:DeprecationWarning",
]
asyncio_mode = "auto"
